2006-12-21  Neal H. Walfield  <neal@gnu.org>

	* event.c (event_flush): Jump to the error handling if an error
	occured.

2006-12-14  Joe McCarthy <mccarthy@granular.che.pitt.edu>

	* event-db.c (buzzer): Change EVENT_DB_CLASS to EVENT_DB_GET_CLASS to
	fix crashing with unacknowledged alarms.
			
2006-08-28  Neal H. Walfield  <neal@gnu.org>

	* sqlite.c (event_load_callback): Correctly copy the day of the
	week specification.
	Reported by Joseph J. McCarthy <mccarthy@engrng.pitt.edu>.

2006-08-28  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (check_PROGRAMS): Add test-recur-weekly-2.
	(TESTS): Likewise.
	(test_recur_weekly_2_SOURCES): New.
	(test_recur_weekly_2_LDADD): Likewise.
	* test-recur-weekly-2.c: New file.
	* test-recur-weekly-2.expected: Likewise.

2006-08-08  Neal H. Walfield  <neal@gnu.org>

	* sqlite.c: New file.
	* Makefile.am (libeventdb_la_SOURCES): Add sqlite.c.
	* event-db.h: Don't include <sqlite.h>.  Include "event-cal.h" and
	"event.h".
	(events_enumerate_t): New typedef.
	(eventid_to_uid_t): Likewise.
	(set_default_calendar_t): Likewise.
	(event_new_t): Likewise.
	(event_load_t): Likewise.
	(event_load_details_t): Likewise.
	(event_flush_t): Likewise.
	(event_remove_t): Likewise.
	(list_unacknowledged_alarms_t): Likewise.
	(event_mark_unacknowledged_t): Likewise.
	(event_mark_acknowledged_t): Likewise.
	(acknowledge_alarms_through_t): Likewise.
	(event_calendar_new_t): Likewise.
	(event_calendar_flush_t): Likewise.
	(event_calendar_delete_t): Likewise.
	(event_calendar_list_events_t): Likewise.
	(event_calendar_list_deleted_t): Likewise.
	(event_calendar_flush_deleted_t): Likewise.
	(EventDBClass): Add fields events_enumerate, eventid_to_uid,
	set_default_calendar, event_new, event_load, event_load_details,
	event_flush, event_remove, list_unacknowledged_alarms,
	event_mark_unacknowledged, event_mark_acknowledged,
	acknowledge_alarms_through, event_calendar_new,
	event_calendar_flush, event_calendar_delete,